[gd_scene load_steps=14 format=3 uid="uid://bh2310vi1m4wd"]

[ext_resource type="Script" path="res://scripts/shotgun.gd" id="1_tyr8y"]
[ext_resource type="PackedScene" uid="uid://s71uohvgh8hn" path="res://models/shotgun.blend" id="2_mf1m6"]
[ext_resource type="Material" uid="uid://bo1ih7addsekw" path="res://materials/muzzle_flash.tres" id="3_l8bvr"]
[ext_resource type="AudioStream" uid="uid://dxqogasyd4tyf" path="res://audio/player/shotgun.mp3" id="4_qwgtk"]
[ext_resource type="AudioStream" uid="uid://cbe4m845ggq0t" path="res://audio/player/gun_click.mp3" id="5_nigyk"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_b2ctk"]
height = 5.9999
radius = 0.343744

[sub_resource type="ArrayMesh" id="ArrayMesh_s6j20"]
_surfaces = [{
"aabb": AABB(-2.76169, -0.0939544, -2.76678, 5.52338, 3.07375, 5.52338),
"format": 34896613377,
"index_count": 192,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0, 2, 0, 5, 0, 3, 0, 2, 0, 4, 0, 5, 0, 4, 0, 7, 0, 5, 0, 4, 0, 6, 0, 7, 0, 6, 0, 9, 0, 7, 0, 6, 0, 8, 0, 9, 0, 8, 0, 11, 0, 9, 0, 8, 0, 10, 0, 11, 0, 10, 0, 13, 0, 11, 0, 10, 0, 12, 0, 13, 0, 12, 0, 15, 0, 13, 0, 12, 0, 14, 0, 15, 0, 14, 0, 17, 0, 15, 0, 14, 0, 16, 0, 17, 0, 16, 0, 19, 0, 17, 0, 16, 0, 18, 0, 19, 0, 18, 0, 21, 0, 19, 0, 18, 0, 20, 0, 21, 0, 20, 0, 23, 0, 21, 0, 20, 0, 22, 0, 23, 0, 22, 0, 25, 0, 23, 0, 22, 0, 24, 0, 25, 0, 24, 0, 27, 0, 25, 0, 24, 0, 26, 0, 27, 0, 26, 0, 29, 0, 27, 0, 26, 0, 28, 0, 29, 0, 28, 0, 31, 0, 29, 0, 28, 0, 30, 0, 31, 0, 30, 0, 33, 0, 31, 0, 30, 0, 32, 0, 33, 0, 32, 0, 35, 0, 33, 0, 32, 0, 34, 0, 35, 0, 34, 0, 37, 0, 35, 0, 34, 0, 36, 0, 37, 0, 36, 0, 39, 0, 37, 0, 36, 0, 38, 0, 39, 0, 38, 0, 41, 0, 39, 0, 38, 0, 40, 0, 41, 0, 40, 0, 43, 0, 41, 0, 40, 0, 42, 0, 43, 0, 42, 0, 45, 0, 43, 0, 42, 0, 44, 0, 45, 0, 44, 0, 47, 0, 45, 0, 44, 0, 46, 0, 47, 0, 46, 0, 49, 0, 47, 0, 46, 0, 48, 0, 49, 0, 48, 0, 51, 0, 49, 0, 48, 0, 50, 0, 51, 0, 50, 0, 53, 0, 51, 0, 50, 0, 52, 0, 53, 0, 52, 0, 55, 0, 53, 0, 52, 0, 54, 0, 55, 0, 54, 0, 57, 0, 55, 0, 54, 0, 56, 0, 57, 0, 56, 0, 59, 0, 57, 0, 56, 0, 58, 0, 59, 0, 58, 0, 61, 0, 59, 0, 58, 0, 60, 0, 61, 0, 60, 0, 63, 0, 61, 0, 60, 0, 62, 0, 63, 0, 62, 0, 1, 0, 63, 0, 62, 0, 0, 0, 1, 0),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 64,
"vertex_data": PackedByteArray(255, 127, 0, 0, 19, 125, 0, 0, 255, 127, 255, 255, 0, 0, 0, 0, 151, 128, 0, 0, 34, 125, 0, 0, 248, 152, 255, 255, 117, 2, 0, 0, 42, 129, 0, 0, 78, 125, 0, 0, 251, 176, 255, 255, 190, 9, 0, 0, 177, 129, 0, 0, 151, 125, 0, 0, 28, 199, 255, 255, 146, 21, 0, 0, 39, 130, 0, 0, 248, 125, 0, 0, 129, 218, 255, 255, 125, 37, 0, 0, 136, 130, 0, 0, 110, 126, 0, 0, 108, 234, 255, 255, 226, 56, 0, 0, 208, 130, 0, 0, 245, 126, 0, 0, 64, 246, 255, 255, 3, 79, 0, 0, 253, 130, 0, 0, 135, 127, 0, 0, 137, 253, 255, 255, 6, 103, 0, 0, 12, 131, 0, 0, 32, 128, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 253, 130, 0, 0, 184, 128, 0, 0, 137, 253, 255, 255, 248, 152, 0, 0, 208, 130, 0, 0, 75, 129, 0, 0, 64, 246, 255, 255, 251, 176, 0, 0, 136, 130, 0, 0, 210, 129, 0, 0, 108, 234, 255, 255, 28, 199, 0, 0, 39, 130, 0, 0, 72, 130, 0, 0, 129, 218, 255, 255, 129, 218, 0, 0, 177, 129, 0, 0, 169, 130, 0, 0, 28, 199, 255, 255, 108, 234, 0, 0, 42, 129, 0, 0, 241, 130, 0, 0, 251, 176, 255, 255, 64, 246, 0, 0, 151, 128, 0, 0, 30, 131, 0, 0, 248, 152, 255, 255, 137, 253, 0, 0, 255, 127, 0, 0, 45, 131, 0, 0, 255, 127, 255, 255, 255, 255, 0, 0, 103, 127, 0, 0, 30, 131, 0, 0, 6, 103, 255, 255, 137, 253, 0, 0, 212, 126, 0, 0, 241, 130, 0, 0, 3, 79, 255, 255, 64, 246, 0, 0, 77, 126, 0, 0, 169, 130, 0, 0, 226, 56, 255, 255, 108, 234, 0, 0, 215, 125, 0, 0, 72, 130, 0, 0, 125, 37, 255, 255, 129, 218, 0, 0, 118, 125, 0, 0, 210, 129, 0, 0, 146, 21, 255, 255, 28, 199, 0, 0, 46, 125, 0, 0, 75, 129, 0, 0, 190, 9, 255, 255, 251, 176, 0, 0, 1, 125, 0, 0, 184, 128, 0, 0, 117, 2, 255, 255, 248, 152, 0, 0, 242, 124, 0, 0, 32, 128, 0, 0, 0, 0, 255, 255, 255, 127, 0, 0, 1, 125, 0, 0, 135, 127, 0, 0, 117, 2, 255, 255, 6, 103, 0, 0, 46, 125, 0, 0, 245, 126, 0, 0, 190, 9, 255, 255, 3, 79, 0, 0, 118, 125, 0, 0, 110, 126, 0, 0, 146, 21, 255, 255, 226, 56, 0, 0, 215, 125, 0, 0, 248, 125, 0, 0, 125, 37, 255, 255, 125, 37, 0, 0, 77, 126, 0, 0, 151, 125, 0, 0, 226, 56, 255, 255, 146, 21, 0, 0, 212, 126, 0, 0, 78, 125, 0, 0, 3, 79, 255, 255, 190, 9, 0, 0, 103, 127, 0, 0, 34, 125, 0, 0, 6, 103, 255, 255, 117, 2, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_huf5r"]
resource_local_to_scene = true
resource_name = "muzzle_flash_Cylinder_005"
_surfaces = [{
"aabb": AABB(-2.76169, -0.0939544, -2.76678, 5.52338, 3.07375, 5.52338),
"attribute_data": PackedByteArray(0, 0, 255, 127, 255, 255, 255, 127, 0, 0, 0, 0, 255, 255, 0, 0, 255, 247, 255, 127, 255, 247, 255, 127, 255, 247, 0, 0, 255, 247, 0, 0, 255, 239, 255, 127, 255, 239, 255, 127, 255, 239, 0, 0, 255, 239, 0, 0, 255, 231, 255, 127, 255, 231, 255, 127, 255, 231, 0, 0, 255, 231, 0, 0, 255, 223, 255, 127, 255, 223, 255, 127, 255, 223, 0, 0, 255, 223, 0, 0, 255, 215, 255, 127, 255, 215, 255, 127, 255, 215, 0, 0, 255, 215, 0, 0, 255, 207, 255, 127, 255, 207, 255, 127, 255, 207, 0, 0, 255, 207, 0, 0, 255, 199, 255, 127, 255, 199, 255, 127, 255, 199, 0, 0, 255, 199, 0, 0, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 0, 0, 255, 191, 0, 0, 255, 183, 255, 127, 255, 183, 255, 127, 255, 183, 0, 0, 255, 183, 0, 0, 255, 175, 255, 127, 255, 175, 255, 127, 255, 175, 0, 0, 255, 175, 0, 0, 255, 167, 255, 127, 255, 167, 255, 127, 255, 167, 0, 0, 255, 167, 0, 0, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 0, 0, 255, 159, 0, 0, 255, 151, 255, 127, 255, 151, 255, 127, 255, 151, 0, 0, 255, 151, 0, 0, 255, 143, 255, 127, 255, 143, 255, 127, 255, 143, 0, 0, 255, 143, 0, 0, 255, 135, 255, 127, 255, 135, 255, 127, 255, 135, 0, 0, 255, 135, 0, 0, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 0, 0, 255, 127, 0, 0, 255, 119, 255, 127, 255, 119, 255, 127, 255, 119, 0, 0, 255, 119, 0, 0, 255, 111, 255, 127, 255, 111, 255, 127, 255, 111, 0, 0, 255, 111, 0, 0, 255, 103, 255, 127, 255, 103, 255, 127, 255, 103, 0, 0, 255, 103, 0, 0, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 0, 0, 255, 95, 0, 0, 255, 87, 255, 127, 255, 87, 255, 127, 255, 87, 0, 0, 255, 87, 0, 0, 255, 79, 255, 127, 255, 79, 255, 127, 255, 79, 0, 0, 255, 79, 0, 0, 255, 71, 255, 127, 255, 71, 255, 127, 255, 71, 0, 0, 255, 71, 0, 0, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 0, 0, 255, 63, 0, 0, 255, 55, 255, 127, 255, 55, 255, 127, 255, 55, 0, 0, 255, 55, 0, 0, 255, 47, 255, 127, 255, 47, 255, 127, 255, 47, 0, 0, 255, 47, 0, 0, 255, 39, 255, 127, 255, 39, 255, 127, 255, 39, 0, 0, 255, 39, 0, 0, 255, 31, 255, 127, 255, 31, 255, 127, 255, 31, 0, 0, 255, 31, 0, 0, 255, 23, 255, 127, 255, 23, 255, 127, 255, 23, 0, 0, 255, 23, 0, 0, 255, 15, 255, 127, 255, 15, 255, 127, 255, 15, 0, 0, 255, 15, 0, 0, 255, 7, 255, 127, 255, 7, 255, 127, 255, 7, 0, 0, 255, 7, 0, 0),
"format": 34896613399,
"index_count": 192,
"index_data": PackedByteArray(1, 0, 6, 0, 3, 0, 1, 0, 4, 0, 6, 0, 5, 0, 10, 0, 7, 0, 5, 0, 8, 0, 10, 0, 9, 0, 14, 0, 11, 0, 9, 0, 12, 0, 14, 0, 13, 0, 18, 0, 15, 0, 13, 0, 16, 0, 18, 0, 17, 0, 22, 0, 19, 0, 17, 0, 20, 0, 22, 0, 21, 0, 26, 0, 23, 0, 21, 0, 24, 0, 26, 0, 25, 0, 30, 0, 27, 0, 25, 0, 28, 0, 30, 0, 29, 0, 34, 0, 31, 0, 29, 0, 32, 0, 34, 0, 33, 0, 39, 0, 35, 0, 33, 0, 37, 0, 39, 0, 36, 0, 43, 0, 38, 0, 36, 0, 41, 0, 43, 0, 40, 0, 47, 0, 42, 0, 40, 0, 45, 0, 47, 0, 44, 0, 51, 0, 46, 0, 44, 0, 49, 0, 51, 0, 48, 0, 55, 0, 50, 0, 48, 0, 53, 0, 55, 0, 52, 0, 59, 0, 54, 0, 52, 0, 57, 0, 59, 0, 56, 0, 63, 0, 58, 0, 56, 0, 61, 0, 63, 0, 60, 0, 67, 0, 62, 0, 60, 0, 65, 0, 67, 0, 64, 0, 71, 0, 66, 0, 64, 0, 69, 0, 71, 0, 68, 0, 75, 0, 70, 0, 68, 0, 73, 0, 75, 0, 72, 0, 79, 0, 74, 0, 72, 0, 77, 0, 79, 0, 76, 0, 83, 0, 78, 0, 76, 0, 81, 0, 83, 0, 80, 0, 87, 0, 82, 0, 80, 0, 85, 0, 87, 0, 84, 0, 91, 0, 86, 0, 84, 0, 89, 0, 91, 0, 88, 0, 95, 0, 90, 0, 88, 0, 93, 0, 95, 0, 92, 0, 98, 0, 94, 0, 92, 0, 96, 0, 98, 0, 97, 0, 102, 0, 99, 0, 97, 0, 100, 0, 102, 0, 101, 0, 106, 0, 103, 0, 101, 0, 104, 0, 106, 0, 105, 0, 110, 0, 107, 0, 105, 0, 108, 0, 110, 0, 109, 0, 114, 0, 111, 0, 109, 0, 112, 0, 114, 0, 113, 0, 118, 0, 115, 0, 113, 0, 116, 0, 118, 0, 117, 0, 122, 0, 119, 0, 117, 0, 120, 0, 122, 0, 121, 0, 126, 0, 123, 0, 121, 0, 124, 0, 126, 0, 125, 0, 2, 0, 127, 0, 125, 0, 0, 0, 2, 0),
"material": ExtResource("3_l8bvr"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 128,
"vertex_data": PackedByteArray(255, 127, 0, 0, 19, 125, 64, 252, 255, 127, 0, 0, 19, 125, 64, 252, 255, 127, 255, 255, 0, 0, 64, 252, 255, 127, 255, 255, 0, 0, 64, 252, 151, 128, 0, 0, 34, 125, 64, 252, 151, 128, 0, 0, 34, 125, 196, 244, 248, 152, 255, 255, 117, 2, 64, 252, 248, 152, 255, 255, 117, 2, 196, 244, 42, 129, 0, 0, 78, 125, 196, 244, 42, 129, 0, 0, 78, 125, 75, 237, 251, 176, 255, 255, 190, 9, 196, 244, 251, 176, 255, 255, 190, 9, 75, 237, 177, 129, 0, 0, 151, 125, 75, 237, 177, 129, 0, 0, 151, 125, 217, 229, 28, 199, 255, 255, 146, 21, 75, 237, 28, 199, 255, 255, 146, 21, 217, 229, 39, 130, 0, 0, 248, 125, 217, 229, 39, 130, 0, 0, 248, 125, 111, 222, 129, 218, 255, 255, 125, 37, 217, 229, 129, 218, 255, 255, 125, 37, 111, 222, 136, 130, 0, 0, 110, 126, 111, 222, 136, 130, 0, 0, 110, 126, 19, 215, 108, 234, 255, 255, 226, 56, 111, 222, 108, 234, 255, 255, 226, 56, 19, 215, 208, 130, 0, 0, 245, 126, 19, 215, 208, 130, 0, 0, 245, 126, 200, 207, 64, 246, 255, 255, 3, 79, 19, 215, 64, 246, 255, 255, 3, 79, 200, 207, 253, 130, 0, 0, 135, 127, 200, 207, 253, 130, 0, 0, 135, 127, 150, 200, 137, 253, 255, 255, 6, 103, 200, 207, 137, 253, 255, 255, 6, 103, 150, 200, 12, 131, 0, 0, 32, 128, 150, 200, 12, 131, 0, 0, 32, 128, 133, 193, 255, 255, 255, 255, 255, 127, 150, 200, 255, 255, 255, 255, 255, 127, 133, 193, 253, 130, 0, 0, 184, 128, 162, 186, 253, 130, 0, 0, 184, 128, 133, 193, 137, 253, 255, 255, 248, 152, 162, 186, 137, 253, 255, 255, 248, 152, 133, 193, 208, 130, 0, 0, 75, 129, 1, 180, 208, 130, 0, 0, 75, 129, 162, 186, 64, 246, 255, 255, 251, 176, 1, 180, 64, 246, 255, 255, 251, 176, 162, 186, 136, 130, 0, 0, 210, 129, 192, 173, 136, 130, 0, 0, 210, 129, 1, 180, 108, 234, 255, 255, 28, 199, 192, 173, 108, 234, 255, 255, 28, 199, 1, 180, 39, 130, 0, 0, 72, 130, 11, 168, 39, 130, 0, 0, 72, 130, 192, 173, 129, 218, 255, 255, 129, 218, 11, 168, 129, 218, 255, 255, 129, 218, 192, 173, 177, 129, 0, 0, 169, 130, 41, 163, 177, 129, 0, 0, 169, 130, 11, 168, 28, 199, 255, 255, 108, 234, 41, 163, 28, 199, 255, 255, 108, 234, 11, 168, 42, 129, 0, 0, 241, 130, 124, 159, 42, 129, 0, 0, 241, 130, 41, 163, 251, 176, 255, 255, 64, 246, 124, 159, 251, 176, 255, 255, 64, 246, 41, 163, 151, 128, 0, 0, 30, 131, 121, 157, 151, 128, 0, 0, 30, 131, 124, 159, 248, 152, 255, 255, 137, 253, 121, 157, 248, 152, 255, 255, 137, 253, 124, 159, 255, 127, 0, 0, 45, 131, 121, 157, 255, 127, 0, 0, 45, 131, 121, 157, 255, 127, 255, 255, 255, 255, 121, 157, 255, 127, 255, 255, 255, 255, 121, 157, 103, 127, 0, 0, 30, 131, 124, 159, 103, 127, 0, 0, 30, 131, 121, 157, 6, 103, 255, 255, 137, 253, 124, 159, 6, 103, 255, 255, 137, 253, 121, 157, 212, 126, 0, 0, 241, 130, 41, 163, 212, 126, 0, 0, 241, 130, 124, 159, 3, 79, 255, 255, 64, 246, 41, 163, 3, 79, 255, 255, 64, 246, 124, 159, 77, 126, 0, 0, 169, 130, 11, 168, 77, 126, 0, 0, 169, 130, 41, 163, 226, 56, 255, 255, 108, 234, 11, 168, 226, 56, 255, 255, 108, 234, 41, 163, 215, 125, 0, 0, 72, 130, 192, 173, 215, 125, 0, 0, 72, 130, 11, 168, 125, 37, 255, 255, 129, 218, 192, 173, 125, 37, 255, 255, 129, 218, 11, 168, 118, 125, 0, 0, 210, 129, 1, 180, 118, 125, 0, 0, 210, 129, 192, 173, 146, 21, 255, 255, 28, 199, 1, 180, 146, 21, 255, 255, 28, 199, 192, 173, 46, 125, 0, 0, 75, 129, 162, 186, 46, 125, 0, 0, 75, 129, 1, 180, 190, 9, 255, 255, 251, 176, 162, 186, 190, 9, 255, 255, 251, 176, 1, 180, 1, 125, 0, 0, 184, 128, 133, 193, 1, 125, 0, 0, 184, 128, 162, 186, 117, 2, 255, 255, 248, 152, 133, 193, 117, 2, 255, 255, 248, 152, 162, 186, 242, 124, 0, 0, 32, 128, 133, 193, 242, 124, 0, 0, 32, 128, 150, 200, 0, 0, 255, 255, 255, 127, 133, 193, 0, 0, 255, 255, 255, 127, 150, 200, 1, 125, 0, 0, 135, 127, 150, 200, 1, 125, 0, 0, 135, 127, 200, 207, 117, 2, 255, 255, 6, 103, 150, 200, 117, 2, 255, 255, 6, 103, 200, 207, 46, 125, 0, 0, 245, 126, 200, 207, 46, 125, 0, 0, 245, 126, 19, 215, 190, 9, 255, 255, 3, 79, 200, 207, 190, 9, 255, 255, 3, 79, 19, 215, 118, 125, 0, 0, 110, 126, 19, 215, 118, 125, 0, 0, 110, 126, 111, 222, 146, 21, 255, 255, 226, 56, 19, 215, 146, 21, 255, 255, 226, 56, 111, 222, 215, 125, 0, 0, 248, 125, 111, 222, 215, 125, 0, 0, 248, 125, 217, 229, 125, 37, 255, 255, 125, 37, 111, 222, 125, 37, 255, 255, 125, 37, 217, 229, 77, 126, 0, 0, 151, 125, 217, 229, 77, 126, 0, 0, 151, 125, 75, 237, 226, 56, 255, 255, 146, 21, 217, 229, 226, 56, 255, 255, 146, 21, 75, 237, 212, 126, 0, 0, 78, 125, 75, 237, 212, 126, 0, 0, 78, 125, 196, 244, 3, 79, 255, 255, 190, 9, 75, 237, 3, 79, 255, 255, 190, 9, 196, 244, 103, 127, 0, 0, 34, 125, 196, 244, 103, 127, 0, 0, 34, 125, 64, 252, 6, 103, 255, 255, 117, 2, 196, 244, 6, 103, 255, 255, 117, 2, 64, 252, 214, 91, 77, 254, 78, 126, 41, 36, 214, 91, 77, 254, 78, 126, 41, 36, 78, 126, 41, 36, 4, 123, 140, 38, 78, 126, 41, 36, 4, 123, 140, 38, 4, 123, 140, 38, 207, 119, 226, 40, 4, 123, 140, 38, 207, 119, 226, 40, 207, 119, 226, 40, 156, 116, 52, 43, 207, 119, 226, 40, 156, 116, 52, 43, 156, 116, 52, 43, 94, 113, 143, 45, 156, 116, 52, 43, 94, 113, 143, 45, 94, 113, 143, 45, 2, 110, 0, 48, 94, 113, 143, 45, 2, 110, 0, 48, 2, 110, 0, 48, 117, 106, 148, 50, 2, 110, 0, 48, 117, 106, 148, 50, 117, 106, 148, 50, 160, 102, 93, 53, 117, 106, 148, 50, 160, 102, 93, 53, 160, 102, 93, 53, 100, 98, 113, 56, 160, 102, 93, 53, 100, 98, 113, 56, 150, 93, 238, 59, 100, 98, 113, 56, 150, 93, 238, 59, 100, 98, 113, 56, 249, 87, 2, 64, 150, 93, 238, 59, 249, 87, 2, 64, 150, 93, 238, 59, 49, 81, 241, 68, 249, 87, 2, 64, 49, 81, 241, 68, 249, 87, 2, 64, 165, 72, 40, 75, 49, 81, 241, 68, 165, 72, 40, 75, 49, 81, 241, 68, 74, 61, 106, 83, 165, 72, 40, 75, 74, 61, 106, 83, 165, 72, 40, 75, 27, 45, 48, 95, 74, 61, 106, 83, 27, 45, 48, 95, 74, 61, 106, 83, 139, 19, 199, 113, 27, 45, 48, 95, 139, 19, 199, 113, 27, 45, 48, 95, 55, 14, 139, 147, 139, 19, 199, 113, 55, 14, 139, 147, 139, 19, 199, 113, 207, 32, 26, 173, 55, 14, 139, 147, 207, 32, 26, 173, 55, 14, 139, 147, 149, 44, 74, 189, 207, 32, 26, 173, 149, 44, 74, 189, 207, 32, 26, 173, 215, 52, 164, 200, 149, 44, 74, 189, 215, 52, 164, 200, 149, 44, 74, 189, 14, 59, 48, 209, 215, 52, 164, 200, 14, 59, 48, 209, 215, 52, 164, 200, 252, 63, 249, 215, 14, 59, 48, 209, 252, 63, 249, 215, 14, 59, 48, 209, 16, 68, 149, 221, 252, 63, 249, 215, 16, 68, 149, 221, 252, 63, 249, 215, 142, 71, 99, 226, 16, 68, 149, 221, 142, 71, 99, 226, 16, 68, 149, 221, 142, 71, 99, 226, 162, 74, 159, 230, 142, 71, 99, 226, 162, 74, 159, 230, 162, 74, 159, 230, 107, 77, 117, 234, 162, 74, 159, 230, 107, 77, 117, 234, 107, 77, 117, 234, 255, 79, 1, 238, 107, 77, 117, 234, 255, 79, 1, 238, 255, 79, 1, 238, 111, 82, 93, 241, 255, 79, 1, 238, 111, 82, 93, 241, 111, 82, 93, 241, 203, 84, 156, 244, 111, 82, 93, 241, 203, 84, 156, 244, 203, 84, 156, 244, 29, 87, 206, 247, 203, 84, 156, 244, 29, 87, 206, 247, 29, 87, 206, 247, 114, 89, 4, 251, 29, 87, 206, 247, 114, 89, 4, 251, 114, 89, 4, 251, 214, 91, 77, 254, 114, 89, 4, 251, 214, 91, 77, 254)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_s6j20")

[sub_resource type="Animation" id="Animation_r6jvq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:ready_to_fire")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/GunClick:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0872665, 0)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Model:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.315, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Model:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.296702, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Model:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.593, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Model:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Model:rotation:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Model:rotation:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.0872665, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Model:rotation:z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_le30g"]
resource_name = "muzzle_flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash/MuzzleFlashMesh:mesh:surface_0/material:shader_parameter/frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.907, -0.224]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:rotation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.1, 1.79141, 1.20148, -0.4, 0.0548767, 0.2, -0.452733, 0, -0.3, -0.787798, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.5)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:ready_to_fire")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Audio/Shoot:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(-0.0390638),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_weth6"]
resource_name = "no_ammo"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Audio/GunClick:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.0872665, 0), Vector3(0, 0.174533, 0.349066), Vector3(0, 0, -0.349066), Vector3(0, 0.0872665, 0)]
}

[sub_resource type="Animation" id="Animation_rvjrg"]
resource_name = "reload"
length = 1.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.315, -0.25, 0, 0.25, 0, 0.315, -0.25, 0, 0.25, 0, 0.315, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.3, 0.7, 1.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1.08364, -0.25, 0, 0.25, 0, 0.625607, -0.25, 0, 0.25, 0, -0.296702, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.3, 0.7, 1.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.548732, -0.25, 0, 0.25, 0, -0.604714, -0.25, 0, 0.25, 0, -0.593, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.3, 0.7, 1.2)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Model:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Model:rotation:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-0.26085, -0.25, 0, 0.25, 0, 1.01044, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.3, 0.7, 1.2)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Model:rotation:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(3.05126, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.0872665, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.3, 0.7, 1.2)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Model:rotation:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-3.11824, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.3, 0.7, 1.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ac1ew"]
_data = {
"RESET": SubResource("Animation_r6jvq"),
"gun_shoot": SubResource("Animation_le30g"),
"no_ammo": SubResource("Animation_weth6"),
"reload": SubResource("Animation_rvjrg")
}

[node name="Shotgun" type="Node3D"]
script = ExtResource("1_tyr8y")
knockback_force = 20.0

[node name="Hitbox" type="Area3D" parent="."]
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -4.42978)
shape = SubResource("CylinderShape3D_b2ctk")
disabled = true

[node name="Model" parent="." instance=ExtResource("2_mf1m6")]
transform = Transform3D(0.199239, 0, 0.0174312, 0, 0.2, 0, -0.0174312, 0, 0.199239, 0.315, -0.296702, -0.593)

[node name="MuzzleFlash" type="Node3D" parent="."]
transform = Transform3D(0.362025, 0, 0.0265855, 0, 0.363, 0, -0.0265855, 0, 0.362025, 0.205214, -0.210472, -1.61465)

[node name="MuzzleFlashMesh" type="MeshInstance3D" parent="MuzzleFlash"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("ArrayMesh_huf5r")
skeleton = NodePath("")

[node name="Audio" type="Node3D" parent="."]

[node name="Shoot" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.342454, -0.202809, -1.57111)
stream = ExtResource("4_qwgtk")
volume_db = -30.0

[node name="GunClick" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.342454, -0.202809, -0.566108)
stream = ExtResource("5_nigyk")
volume_db = -30.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ac1ew")
}

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[connection signal="body_entered" from="Hitbox" to="." method="deal_damage"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
